8145294: TestLogRotation.java triggers a race in the UL framework

Reviewed-by: sla, mgronlun